// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`snapshot tests Card component matches snapshot 1`] = `
<div>
  <div
    class="Card"
  >
    <h4
      class="Card-title"
    >
      test-caption
    </h4>
    <img
      alt="test-caption"
      class="Card-image"
      src="src.png"
    />
    <small
      class="Card-small"
    >
      Image 
      1
       of 
      3
      .
    </small>
  </div>
</div>
`;

exports[`snapshot tests Carousel component matches snapshot 1`] = `
<div>
  <div
    class="Carousel"
  >
    <h1>
      test-title
    </h1>
    <div
      class="Carousel-main"
    >
      <i
        class="bi bi-arrow-left-circle"
      />
      <div
        class="Card"
      >
        <h4
          class="Card-title"
        >
          test-image1
        </h4>
        <img
          alt="test-image1"
          class="Card-image"
          src="test-image1"
        />
        <small
          class="Card-small"
        >
          Image 
          1
           of 
          1
          .
        </small>
      </div>
      <i
        class="bi bi-arrow-right-circle"
      />
    </div>
  </div>
</div>
`;
